--- a/form006.html
+++ b/form006.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulário</title>
+    <title>Formulário2</title>
 </head>
 <body>
-    <h1>Exemplo de Formulário</h1>
+    <h1>Exemplo de Formulário2</h1>
     <form action="cadastro.php" method="post" autocomplete="on"></form>
     <p>
         <!-- input type color
